--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,12 @@ services:
       - "3000:3000"
   mongo:
     image: "mongo"
+    volumes:
+      - mongo-data:/data/db
   mongo-express:
     image: "mongo-express"
     ports:
       - "8081:8081"
+volumes:
+  mongo-data:
+    driver: local
