--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,8 @@ services:
     image: "mongo-express"
     ports:
       - "8081:8081"
+    depends_on:
+      - "mongo"
 volumes:
   mongo-data:
     driver: local
